# algo-trading

./: .env.example  .gitignore  deploy.md  docker-compose.yml
algo-trading-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
algo-trading-backend/api/: __init__.py  db.py  deps.py  main.py  scheduler.py
algo-trading-backend/api/models/: __init__.py  backtest_run.py  base.py  live_config.py  live_trade.py  trade.py
algo-trading-backend/api/routers/: __init__.py  backtests.py  data.py  live_trades.py  strategies.py  trades.py
algo-trading-backend/api/schemas/: __init__.py  backtest.py  live_trade.py  trade.py
algo-trading-backend/configs/: settings.py
algo-trading-backend/migrations/: env.py
algo-trading-backend/migrations/versions/: 001_initial_schema.py  002_add_backtest_status.py  003_rename_trades_to_backtest_trades.py  004_add_live_tables.py  005_live_config_drop_variation.py  006_live_trade_drop_variation.py
algo-trading-backend/src/algo_trading/: __init__.py
algo-trading-backend/src/algo_trading/analytics/: __init__.py  analytics.py
algo-trading-backend/src/algo_trading/backtest/: __init__.py  backtest.py
algo-trading-backend/src/algo_trading/data_feed/: __init__.py  data_feed.py
algo-trading-backend/src/algo_trading/executor/: __init__.py  executor.py
algo-trading-backend/src/algo_trading/indicators/: __init__.py  indicators.py
algo-trading-backend/src/algo_trading/journal/: __init__.py  journal.py
algo-trading-backend/src/algo_trading/notifications/: telegram.py
algo-trading-backend/src/algo_trading/risk/: __init__.py  risk.py
algo-trading-backend/src/algo_trading/signal/: __init__.py  signal.py
algo-trading-backend/tests/: __init__.py  conftest.py
algo-trading-backend/tests/unit/: __init__.py  test_indicators.py  test_risk.py
algo-trading-frontend/: .dockerignore  .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
algo-trading-frontend/app/: globals.css  layout.tsx  page.tsx
algo-trading-frontend/components/backtests/: BacktestConfigForm.tsx  BacktestResultPanel.tsx  CsvUploadCard.tsx  RunTestModal.tsx
algo-trading-frontend/components/charts/: CandleChart.tsx  DrawdownChart.tsx  EquityCurve.tsx  TradeMapChart.tsx
algo-trading-frontend/components/layout/: Header.tsx  Sidebar.tsx
algo-trading-frontend/components/live/: LiveConfigCard.tsx
algo-trading-frontend/components/tables/: TradeTable.tsx
algo-trading-frontend/lib/: api.ts  utils.ts
algo-trading-frontend/types/: index.ts
nginx/: algotrader.conf
(+8 files in other folders)
